--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>exception</module>
         <module>array</module>
         <module>collection</module>
+        <module>time</module>
     </modules>
 
 
