--- a/time/pom.xml
+++ b/time/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zothers</artifactId>
+    <artifactId>time</artifactId>
 
 
 </project>
